--- a/index.html
+++ b/index.html
@@ -92,8 +92,12 @@
           </div>
         </div>
       </section>
-      <!-- <section class="feynman"></section>
-      <section class="kaufman"></section> -->
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть.</p>
+        <a href="" class="feynman__link">Подробнее →</a>
+      </section>
+      <section class="kaufman"></section>
     </main>
     <footer class="footer"></footer>
   </body>
