--- a/index.html
+++ b/index.html
@@ -97,7 +97,77 @@
         <p class="feynman__subtitle">Выучить и не забыть.</p>
         <a href="" class="feynman__link">Подробнее →</a>
       </section>
-      <section class="kaufman"></section>
+      <section class="kaufman">
+        <h1 class="section-title section-title_theme-dark">
+          Принципы обучения
+        </h1>
+        <p class="section-subtitle section-subtitle_theme-dark">
+          от Джоша Кауфмана
+        </p>
+        <div class="table table_theme-dark">
+          <div class="table__cell table__cell_theme-dark">
+            <h2 class="table__heading table__heading_theme-dark">1</h2>
+            <p class="table__text table__text_theme-dark">
+              Выберите привлекательный проект.
+            </p>
+          </div>
+          <div class="table__cell table__cell_theme-dark">
+            <h2 class="table__heading table__heading_theme-dark">2</h2>
+            <p class="table__text table__text_theme-dark">
+              Сосредоточьтесь на каком-то одном навыке.
+            </p>
+          </div>
+          <div class="table__cell table__cell_theme-dark">
+            <h2 class="table__heading table__heading_theme-dark">3</h2>
+            <p class="table__text table__text_theme-dark">
+              Определите целевой уровень мастерства.
+            </p>
+          </div>
+          <div class="table__cell table__cell_theme-dark">
+            <h2 class="table__heading table__heading_theme-dark">4</h2>
+            <p class="table__text table__text_theme-dark">
+              Разбейте навык на элементы.
+            </p>
+          </div>
+          <div class="table__cell table__cell_theme-dark">
+            <h2 class="table__heading table__heading_theme-dark">5</h2>
+            <p class="table__text table__text_theme-dark">
+              Приготовьте всё необходимое для занятий.
+            </p>
+          </div>
+          <div class="table__cell table__cell_theme-dark">
+            <h2 class="table__heading table__heading_theme-dark">6</h2>
+            <p class="table__text table__text_theme-dark">
+              Устраните препятствия для занятий.
+            </p>
+          </div>
+          <div class="table__cell table__cell_theme-dark">
+            <h2 class="table__heading table__heading_theme-dark">7</h2>
+            <p class="table__text table__text_theme-dark">
+              Выделите специальное время для занятий.
+            </p>
+          </div>
+          <div class="table__cell table__cell_theme-dark">
+            <h2 class="table__heading table__heading_theme-dark">8</h2>
+            <p class="table__text table__text_theme-dark">
+              Создайте быстрые петли обратной связи.
+            </p>
+          </div>
+          <div class="table__cell table__cell_theme-dark">
+            <h2 class="table__heading table__heading_theme-dark">9</h2>
+            <p class="table__text table__text_theme-dark">
+              Занимайтесь по расписанию, короткими интенсивными интервалами.
+            </p>
+          </div>
+          <div class="table__cell table__cell_theme-dark">
+            <h2 class="table__heading table__heading_theme-dark">10</h2>
+            <p class="table__text table__text_theme-dark">
+              Уделяйте внимание количеству и скорости.
+            </p>
+          </div>
+        </div>
+        <div class="kaufman__triangle"></div>
+      </section>
     </main>
     <footer class="footer"></footer>
   </body>
