--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
       </div>
     </section>
     <section class="digits">
-      <h3 class="section-title">Цифры и факты</h3>
+      <h2 class="section-title">Цифры и факты</h2>
       <p class="section-subtitle">Про учёбу и мозг</p>
       <div class="table">
         <div class="table__cell">
-          <h3 class="table__heading">86 миллиардов</h2>
-            <p class="table__text">Число нейронов в мозге человека</p>
+          <h3 class="table__heading">86 миллиардов</h3>
+          <p class="table__text">Число нейронов в мозге человека</p>
         </div>
         <div class="table__cell">
           <h3 class="table__heading">2.1 миллиарда</h3>
@@ -97,7 +97,7 @@
     <section class="feynman">
       <h2 class="feynman__title">Метод Фейнмана</h2>
       <p class="feynman__subtitle">Выучить и не забыть.</p>
-      <a href="" class="feynman__link">Подробнее →</a>
+      <a href="#" class="feynman__link">Подробнее →</a>
     </section>
     <section class="kaufman">
       <h2 class="section-title section-title_theme-dark">
@@ -168,7 +168,8 @@
           </p>
         </div>
       </div>
-      <div class="kaufman__triangle"></div>
+      <img src="images/kaufman-triangle.svg" alt="kaufman__triangle" class="kaufman__triangle">
+      <!-- <div class="kaufman__triangle"></div> -->
     </section>
   </main>
   <footer class="footer">
