--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           </p>
         </div>
       </div>
-      <img src="images/kaufman-triangle.svg" alt="kaufman__triangle" class="kaufman__triangle">
+      <img src="images/kaufman-triangle.svg" alt="Треугольник Кауфмана" class="kaufman__triangle">
       <!-- <div class="kaufman__triangle"></div> -->
     </section>
   </main>
@@ -189,11 +189,11 @@
       <div class="footer__column footer__column-content-social">
         <h3 class="footer__column-heading">Соцсети</h3>
         <div class="footer__column-links">
-          <a href="#" class="footer__column-link"><img src="images/youtube-icon.svg" alt="YouTube"
+          <a href="#" class="footer__column-link"><img src="images/youtube-icon.svg" alt="Ютуб"
               class="footer__social-icon">YouTube</a>
           <a href="#" class="footer__column-link"><img src="images/vk_color_white.svg" alt="ВКонтакте"
               class="footer__social-icon">ВКонтакте</a>
-          <a href="#" class="footer__column-link"><img src="images/tiktok-icon.svg" alt="TikTok"
+          <a href="#" class="footer__column-link"><img src="images/tiktok-icon.svg" alt="ТикТок"
               class="footer__social-icon">TikTok</a>
         </div>
       </div>
