--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
       <div class="footer__columns">
         <div class="footer__column footer__column-content-copiright">
           <div class="logo logo_place_footer"></div>
-          <p class="footer__author">&copy; Виктор Абанькин</p>
+          <p class="footer__author">&copy; Александр Ширенков</p>
         </div>
         <div class="footer__column footer__column-content-info">
           <h3 class="footer__column-heading">О Практикуме</h3>
