feynman replace from override to flexbox

--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
     <header class="header">
       <div class="logo logo_place_header"></div>
       <h1 class="header__title">Научиться учиться</h1>
-      <p class="header__sublitle">
+      <p class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете
         использовать в своей жизни?
-        <a href="#" class="header__link">Узнать →</a>
+        <a href="#" class="header__link">Узнать &rarr;</a>
       </p>
 
       <div class="header__square-pic"></div>
-      <div class="header__main-illustration"></div>
+      <!-- <div class="header__main-illustration"></div> -->
+      <img src="images/header-image.png" alt="Картинка с мальчиком" class="header__main-illustration">
     </header>
     <main class="content">
       <section class="description">
@@ -98,7 +99,7 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a href="#" class="feynman__link">Подробнее →</a>
+        <a href="#" class="feynman__link">Подробнее &rarr;</a>
       </section>
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">
@@ -169,34 +170,34 @@
             </p>
           </div>
         </div>
-        <img src="images/kaufman-triangle.svg" alt="Треугольник Кауфмана" class="kaufman__triangle">
-        <!-- <div class="kaufman__triangle"></div> -->
+        <!-- <img src="images/kaufman-triangle.svg" alt="Треугольник Кауфмана" class="kaufman__triangle"> -->
+        <div class="kaufman__triangle"></div>
       </section>
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column footer__column-content-copiright">
+        <div class="footer__column footer__column_content_copyright">
           <div class="logo logo_place_footer"></div>
           <p class="footer__author">&copy; Александр Ширенков</p>
         </div>
-        <div class="footer__column footer__column-content-info">
+        <div class="footer__column footer__column_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
-          <div class="footer__column-links">
+          <nav class="footer__column-links">
             <a href="#" class="footer__column-link">Главная</a>
             <a href="#" class="footer__column-link">Концепции</a>
             <a href="#" class="footer__column-link">Наставники</a>
-          </div>
+          </nav>
         </div>
-        <div class="footer__column footer__column-content-social">
+        <div class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
-          <div class="footer__column-links">
-            <a href="#" class="footer__column-link"><img src="images/youtube-icon.svg" alt="Ютуб"
+          <nav class="footer__column-links">
+            <a href="#" target="_blank" class="footer__column-link"><img src="images/youtube-icon.svg" alt="Ютуб"
                 class="footer__social-icon">YouTube</a>
-            <a href="#" class="footer__column-link"><img src="images/vk_color_white.svg" alt="ВКонтакте"
+            <a href="#" target="_blank" class="footer__column-link"><img src="images/vk_color_white.svg" alt="ВКонтакте"
                 class="footer__social-icon">ВКонтакте</a>
-            <a href="#" class="footer__column-link"><img src="images/tiktok-icon.svg" alt="ТикТок"
+            <a href="#" target="_blank" class="footer__column-link"><img src="images/tiktok-icon.svg" alt="ТикТок"
                 class="footer__social-icon">TikTok</a>
-          </div>
+          </nav>
         </div>
       </div>
     </footer>
