realized Resources Block

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <div class="khan__book-pic"></div>>
+            <div class="khan__book-pic"></div>
             <a href="#" class="khan__buy-link">Купить книгу &rarr;</a>
           </div>
 
@@ -246,6 +246,23 @@
         </ul>
         <!-- <img src="images/kaufman-triangle.svg" alt="Треугольник Кауфмана" class="kaufman__triangle"> -->
         <div class="kaufman__triangle"></div>
+      </section>
+      <section class="resources">
+        <h2 class="section-title">Полезные ресурсы</h2>
+        <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
+
+        <nav class="resources__logo-zone">
+          <a href="#" target="_blank" class="resources__link"><img src="images/logo/resources-arzamas.svg"
+              alt="лого Арзамас" class="resources__logo"></a>
+          <a href="#" target="_blank" class="resources__link"><img src="images/logo/resources-n1.svg" alt="лого Н + 1"
+              class="resources__logo"></a>
+          <a href="#" target="_blank" class="resources__link"><img src="images/logo/resources-strelka.svg"
+              alt="лого стрелка" class="resources__logo"></a>
+          <a href="#" target="_blank" class="resources__link"><img src="images/logo/resources-polka.svg"
+              alt="лого полка" class="resources__logo"></a>
+        </nav>
+
+
       </section>
     </main>
     <footer class="footer">
