--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <p class="header__subtitle">
         Какие современные и эффективные подходы к обучению вы можете
         использовать в своей жизни?
-        <a href="#" class="header__link">Узнать &rarr;</a>
+        <a href="#" class="header__link opacity-link">Узнать &rarr;</a>
       </p>
 
-      <div class="header__square-pic"></div>
+      <div class="header__square-pic rotation"></div>
       <!-- <div class="header__main-illustration"></div> -->
       <img src="images/header-image.png" alt="Картинка с мальчиком" class="header__main-illustration">
     </header>
@@ -109,7 +109,7 @@
       <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a href="#" class="feynman__link">Подробнее &rarr;</a>
+        <a href="#" class="feynman__link opacity-link">Подробнее &rarr;</a>
       </section>
       <section class="digits">
         <h2 class="section-title">Цифры и факты</h2>
@@ -170,7 +170,7 @@
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
             <div class="khan__book-pic"></div>
-            <a href="#" class="khan__buy-link">Купить книгу &rarr;</a>
+            <a href="#" class="khan__buy-link opacity-link">Купить книгу &rarr;</a>
           </div>
 
         </div>
@@ -245,20 +245,20 @@
           </li>
         </ul>
         <!-- <img src="images/kaufman-triangle.svg" alt="Треугольник Кауфмана" class="kaufman__triangle"> -->
-        <div class="kaufman__triangle"></div>
+        <div class="kaufman__triangle rotation"></div>
       </section>
       <section class="resources">
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
 
         <nav class="resources__logo-zone">
-          <a href="#" target="_blank" class="resources__link"><img src="images/logo/resources-arzamas.svg"
+          <a href="#" target="_blank" class="resources__link opacity-link"><img src="images/logo/resources-arzamas.svg"
               alt="лого Арзамас" class="resources__logo"></a>
-          <a href="#" target="_blank" class="resources__link"><img src="images/logo/resources-n1.svg" alt="лого Н + 1"
-              class="resources__logo"></a>
-          <a href="#" target="_blank" class="resources__link"><img src="images/logo/resources-strelka.svg"
+          <a href="#" target="_blank" class="resources__link opacity-link"><img src="images/logo/resources-n1.svg"
+              alt="лого Н + 1" class="resources__logo"></a>
+          <a href="#" target="_blank" class="resources__link opacity-link"><img src="images/logo/resources-strelka.svg"
               alt="лого стрелка" class="resources__logo"></a>
-          <a href="#" target="_blank" class="resources__link"><img src="images/logo/resources-polka.svg"
+          <a href="#" target="_blank" class="resources__link opacity-link"><img src="images/logo/resources-polka.svg"
               alt="лого полка" class="resources__logo"></a>
         </nav>
 
@@ -274,20 +274,20 @@
         <div class="footer__column footer__column_content_info">
           <h3 class="footer__column-heading">О Практикуме</h3>
           <nav class="footer__column-links">
-            <a href="#" class="footer__column-link">Главная</a>
-            <a href="#" class="footer__column-link">Концепции</a>
-            <a href="#" class="footer__column-link">Наставники</a>
+            <a href="#" class="footer__column-link opacity-link">Главная</a>
+            <a href="#" class="footer__column-link opacity-link">Концепции</a>
+            <a href="#" class="footer__column-link opacity-link">Наставники</a>
           </nav>
         </div>
         <div class="footer__column footer__column_content_social">
           <h3 class="footer__column-heading">Соцсети</h3>
           <nav class="footer__column-links">
-            <a href="#" target="_blank" class="footer__column-link"><img src="images/youtube-icon.svg" alt="Ютуб"
-                class="footer__social-icon">YouTube</a>
-            <a href="#" target="_blank" class="footer__column-link"><img src="images/vk_color_white.svg" alt="ВКонтакте"
-                class="footer__social-icon">ВКонтакте</a>
-            <a href="#" target="_blank" class="footer__column-link"><img src="images/tiktok-icon.svg" alt="ТикТок"
-                class="footer__social-icon">TikTok</a>
+            <a href="#" target="_blank" class="footer__column-link opacity-link"><img src="images/youtube-icon.svg"
+                alt="Ютуб" class="footer__social-icon">YouTube</a>
+            <a href="#" target="_blank" class="footer__column-link opacity-link"><img src="images/vk_color_white.svg"
+                alt="ВКонтакте" class="footer__social-icon">ВКонтакте</a>
+            <a href="#" target="_blank" class="footer__column-link opacity-link"><img src="images/tiktok-icon.svg"
+                alt="ТикТок" class="footer__social-icon">TikTok</a>
           </nav>
         </div>
       </div>
