--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="pages/index.css">
   <title>Научиться учиться</title>
 </head>
@@ -163,13 +162,15 @@
         <div class="khan__container">
           <p class="khan__author">Салман Хан</p>
           <h2 class="khan__title">Весь мир — школа</h2>
-          <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему
+          <blockquote class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по
+            всему
             миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду
-            смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+            смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</blockquote>
           <p class="khan__quote-author">Джордж Лукас</p>
           <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
           <div class="khan__book-container">
-            <div class="khan__book-pic"></div>
+            <!-- <div class="khan__book-pic"></div> -->
+            <img class="khan__book-pic" alt="картинка Весь мир Школа" src="images/khan-book.jpg">
             <a href="#" class="khan__buy-link opacity-link">Купить книгу &rarr;</a>
           </div>
 
@@ -251,7 +252,7 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
 
-        <nav class="resources__logo-zone">
+        <div class="resources__logo-zone">
           <a href="#" target="_blank" class="resources__link opacity-link"><img src="images/logo/resources-arzamas.svg"
               alt="лого Арзамас" class="resources__logo"></a>
           <a href="#" target="_blank" class="resources__link opacity-link"><img src="images/logo/resources-n1.svg"
@@ -260,7 +261,7 @@
               alt="лого стрелка" class="resources__logo"></a>
           <a href="#" target="_blank" class="resources__link opacity-link"><img src="images/logo/resources-polka.svg"
               alt="лого полка" class="resources__logo"></a>
-        </nav>
+        </div>
 
 
       </section>
